--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/springsercurity
+spring.datasource.username=root
+spring.datasource.password=26011998
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
